added images link

--- a/README
+++ b/README
@@ -33,5 +33,6 @@ Writeup for Compilers class:
 
 https://docs.google.com/document/pub?id=1SFwkaYSPFYPFJyHl7cnlnA7mRmblswqWt43R5Ouesi0
 
+Images:
 
-
+http://www.flickr.com/photos/chazmatazz/sets/72157625265383263/with/5176125010/
