--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 --- Installation ---
 
-PyMorphous requires numpy, pygame, and PyOpenGL.
+PyMorphous requires numpy, pygame, PyOpenGL and biopython (for KDTree).
 
 --- Running ---
 
@@ -22,8 +22,7 @@ triple_consensus_single_line.py does not work because of limitations in the nbr 
 
 # pymorphous/__init__.py: sys._frame is fast, but perhaps unsafe? Inspect.stack is slow.
 
-# examples/pymorphous/gradient_demo.py: doesn't seem to work. Hard to tell. Likely a bad translation of
-the code.
+# examples/pymorphous/gradient_demo.py: doesn't seem to work. Hard to tell. Likely a bad translation of the code. Could be an issue with the field operations. They also seem very slow.
 
 # examples/triple_consensus_single_line.py does not work because of limitations in the nbr function.
 
@@ -35,7 +34,7 @@ See also http://docs.python.org/library/profile.html for general Python profilin
 
 The profile is saved in PyMorphous.profile, for convenience.
 
-View with ``runsnake PyMorphous.profile``.
+View with ``runsnake PyMorphous.profile``. In RunSnake, select spawn_cloud to see the data.
 
 --- Documentation and Rationale ---
 
