--- a/README
+++ b/README
@@ -1,47 +1,1 @@
---- Installation ---
-
-PyMorphous requires numpy, pygame, PyOpenGL and biopython (for KDTree).
-
---- Running ---
-
-python pymorphous.py examples/pymorphous/consensus.py
-
-or to run all tests
-
-python run_tests.py
-
-triple_consensus_single_line.py does not work because of limitations in the nbr function.
-
---- Roadmap ---
-
-# pymorphous/draw.py: simulator
-## the current implementation is designed to be fast
-## make prettier
-## needs user input to set sense values, move devices
-## use PyQt or other high-level GUI language. Need 3D camera control, perhaps widgets. Look into 3D aerial view open-source software, etc.
-
-# pymorphous/__init__.py: sys._frame is fast, but perhaps unsafe? Inspect.stack is slow.
-
-# examples/pymorphous/gradient_demo.py: doesn't seem to work. Hard to tell. Likely a bad translation of the code. Could be an issue with the field operations. They also seem very slow.
-
-# examples/triple_consensus_single_line.py does not work because of limitations in the nbr function.
-
---- Profiling and Development ---
-
-Use RunSnakeRun: http://www.vrplumber.com/programming/runsnakerun/
-
-See also http://docs.python.org/library/profile.html for general Python profiling.
-
-The profile is saved in PyMorphous.profile, for convenience.
-
-View with ``runsnake PyMorphous.profile``. In RunSnake, select spawn_cloud to see the data.
-
---- Documentation and Rationale ---
-
-Writeup for Compilers class:
-
-https://docs.google.com/document/pub?id=1SFwkaYSPFYPFJyHl7cnlnA7mRmblswqWt43R5Ouesi0
-
-Images:
-
-http://www.flickr.com/photos/chazmatazz/sets/72157625265383263/with/5176125010/
+See http://bitbucket.org/chazmatazz/pymorphous/wiki/Home
