--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-See http://bitbucket.org/chazmatazz/pymorphous/wiki/Home
+About: http://pymorphous.googlecode.com/
+
+Installation: http://code.google.com/p/pymorphous/wiki/Installation
+
+QuickStart: http://code.google.com/p/pymorphous/wiki/QuickStart
